improve efficiency and improve error messages